--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,16 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+
+.poppins {
+  font-family: "Poppins", sans-serif;
+}
+
+/* Hide scrollbar but allow scroll */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE & Edge */
+  scrollbar-width: none;     /* Firefox */
+}
